--- a/as.html
+++ b/as.html
@@ -1,35 +1,40 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Halaman Utama Proyek</title>
-    <link rel="icon" type="image/png" href="icon.png">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="icon.png" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
 
     <style>
-        /* Custom CSS Variables */
         :root {
-            --primary-color: #007bff; /* Standard Bootstrap blue */
-            --secondary-color: #6c757d; /* Standard Bootstrap gray */
-            --body-bg-light: #f8f9fa; /* Light background */
-            --body-bg-dark: #343a40; /* Dark background */
-            --text-color-light: #212529; /* Dark text for light mode */
-            --text-color-dark: #f8f9fa; /* Light text for dark mode */
+            --primary-color: #007bff;
+            --secondary-color: #6c757d;
+            --body-bg-light: #f8f9fa;
+            --body-bg-dark: #343a40;
+            --text-color-light: #212529;
+            --text-color-dark: #f8f9fa;
             --card-bg-light: #ffffff;
             --card-bg-dark: #495057;
             --border-color-light: #dee2e6;
             --border-color-dark: #6c757d;
         }
 
-        /* --- Global Styles --- */
+        * {
+            box-sizing: border-box;
+        }
+
         html, body {
-            height: 100%; /* Pastikan html dan body mengambil 100% tinggi viewport */
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            overflow-x: hidden;
+            scroll-behavior: smooth;
+            -webkit-overflow-scrolling: touch;
+            max-width: 100vw;
         }
 
         body {
@@ -39,12 +44,8 @@
             transition: background-color 0.3s ease, color 0.3s ease;
             display: flex;
             flex-direction: column;
-            min-height: 100vh; /* Ensures body takes full viewport height */
-            margin: 0;
-            padding: 0;
-            overflow-x: hidden; /* Prevents horizontal scroll */
-            /* Tambahkan ini untuk mencegah scroll vertikal berlebihan pada body jika ada konten yang tumpang tindih */
-            overflow-y: auto; 
+            min-height: 100vh;
+            overflow-y: auto;
         }
 
         body.dark-mode {
@@ -52,23 +53,19 @@
             color: var(--text-color-dark);
         }
 
-        /* --- Main Container Styling --- */
         .container-fluid {
-            flex: 1; /* Allows container to take available space */
+            flex: 1;
             display: flex;
             flex-direction: column;
-            justify-content: center; /* Center content vertically */
-            align-items: center; /* Center content horizontally */
-            /* Mengurangi padding vertikal untuk mengurangi blank space */
-            padding-top: 15px; 
-            padding-bottom: 15px;
-            overflow: hidden; /* Ensure content inside doesn't overflow */
+            justify-content: center;
+            align-items: center;
+            padding: 15px 10px;
+            min-height: calc(100vh - 50px);
         }
 
-        /* --- Heading Styles --- */
         h1 {
             color: var(--text-color-light);
-            margin-bottom: 25px; /* Sedikit mengurangi margin bawah heading */
+            margin-bottom: 25px;
             font-weight: 700;
             transition: color 0.3s ease;
         }
@@ -77,55 +74,56 @@
             color: var(--text-color-dark);
         }
 
-        /* --- Project Button Styles --- */
+        .row > .col {
+            padding-left: 5px;
+            padding-right: 5px;
+        }
+
         .project-button {
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             padding: 20px 15px;
-            min-height: 120px; /* Minimum height for buttons */
+            min-height: 120px;
             text-align: center;
             text-decoration: none;
-            color: white; /* Default text color for Bootstrap buttons */
+            color: white;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             transition: all 0.3s ease;
             font-weight: 600;
             font-size: 1.1em;
-            width: 100%; /* Full width in grid */
+            width: 100%;
+            max-width: 100%;
         }
 
         .project-button i {
-            font-size: 2.5em; /* Icon size */
+            font-size: 2.5em;
             margin-bottom: 10px;
-            color: rgba(255, 255, 255, 0.8); /* Slightly transparent icon color */
+            color: rgba(255, 255, 255, 0.8);
         }
 
         .project-button:hover {
             transform: translateY(-3px);
             box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
             opacity: 0.95;
-            color: white; /* Ensure text remains white on hover */
         }
 
-        /* Custom Button Colors (using linear gradients) */
-        .btn-custom-1 { background: linear-gradient(135deg, #1abc9c, #16a085); } /* Emerald Green */
-        .btn-custom-2 { background: linear-gradient(135deg, #3498db, #2980b9); } /* Bright Blue */
-        .btn-custom-3 { background: linear-gradient(135deg, #9b59b6, #8e44ad); } /* Amethyst Purple */
-        .btn-custom-4 { background: linear-gradient(135deg, #e67e22, #d35400); } /* Pumpkin Orange */
-        .btn-custom-5 { background: linear-gradient(135deg, #f1c40f, #f39c12); } /* Bright Yellow */
-        .btn-custom-6 { background: linear-gradient(135deg, #e74c3c, #c0392b); } /* Brick Red */
+        .btn-custom-1 { background: linear-gradient(135deg, #1abc9c, #16a085); }
+        .btn-custom-2 { background: linear-gradient(135deg, #3498db, #2980b9); }
+        .btn-custom-3 { background: linear-gradient(135deg, #9b59b6, #8e44ad); }
+        .btn-custom-4 { background: linear-gradient(135deg, #e67e22, #d35400); }
+        .btn-custom-5 { background: linear-gradient(135deg, #f1c40f, #f39c12); }
+        .btn-custom-6 { background: linear-gradient(135deg, #e74c3c, #c0392b); }
 
-        /* --- Mode Toggle Button Wrapper --- */
         .mode-toggle-wrapper {
             width: 100%;
             display: flex;
             justify-content: center;
-            margin-top: 25px; /* Sedikit mengurangi margin atas toggle button */
+            margin-top: 25px;
         }
 
-        /* Mode Toggle Button Styles */
         .mode-toggle {
             background: none;
             border: none;
@@ -148,14 +146,11 @@
 
         .mode-toggle:hover {
             background-color: rgba(0, 123, 255, 0.1);
-            color: var(--primary-color);
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
         }
 
-        /* Dark Mode Toggle Button Styles */
         body.dark-mode .mode-toggle {
-            color: #9b59b6; /* Purple color for dark mode toggle */
-            box-shadow: 0 2px 5px rgba(255, 255, 255, 0.1);
+            color: #9b59b6;
         }
 
         body.dark-mode .mode-toggle:hover {
@@ -163,10 +158,9 @@
             box-shadow: 0 4px 8px rgba(255, 255, 255, 0.2);
         }
 
-        /* --- Footer Text Styles --- */
         .footer-text {
-            margin-top: 15px; /* Mengurangi margin atas footer */
-            padding-bottom: 15px; /* Mengurangi padding bawah footer */
+            margin-top: 15px;
+            padding-bottom: 15px;
             color: var(--secondary-color);
             font-size: 0.85em;
             text-align: center;
@@ -177,29 +171,33 @@
             color: #bdc3c7;
         }
 
-        /* --- Responsive Adjustments for Smaller Screens --- */
-        @media (max-width: 576px) { /* Extra small devices (portrait phones) */
+        @media (max-width: 576px) {
             .project-button {
                 padding: 15px 10px;
-                min-height: 100px; /* Sedikit lebih kecil untuk layar sangat kecil */
+                min-height: 100px;
                 font-size: 1em;
-                margin-bottom: 15px; /* Tambahkan jarak antar tombol */
+                margin-bottom: 15px;
             }
+
             .project-button i {
                 font-size: 2em;
                 margin-bottom: 8px;
             }
+
             h1 {
                 font-size: 1.5em;
                 margin-bottom: 20px;
             }
+
             .container-fluid {
-                padding-top: 10px; /* Lebih kecil lagi untuk mobile */
+                padding-top: 10px;
                 padding-bottom: 10px;
             }
+
             .mode-toggle-wrapper {
                 margin-top: 20px;
             }
+
             .footer-text {
                 margin-top: 10px;
                 padding-bottom: 10px;
@@ -209,8 +207,7 @@
 </head>
 <body>
     <div class="container-fluid">
-        <h1 class="text-center">Daftar Proyek Saya v2</h1>
-
+        <h1 class="text-center">Daftar Proyek Saya v3</h1>
         <div class="row row-cols-2 g-3">
             <div class="col">
                 <a href="project1.html" class="project-button btn-custom-1">
@@ -243,7 +240,6 @@
                 </a>
             </div>
         </div>
-
         <div class="mode-toggle-wrapper">
             <button id="modeToggle" class="mode-toggle" aria-label="Toggle dark and light mode">
                 <i class="fas fa-moon"></i> <span id="modeText">Mode Terang</span>
@@ -263,21 +259,16 @@
             const modeIcon = modeToggleBtn.querySelector('i');
             const modeText = document.getElementById('modeText');
 
-            /**
-             * Updates the text and icon of the mode toggle button based on the current mode.
-             * @param {boolean} isDarkMode - True if dark mode is active, false otherwise.
-             */
             function updateModeToggleUI(isDarkMode) {
                 if (isDarkMode) {
                     modeText.textContent = 'Mode Gelap';
-                    modeIcon.classList.replace('fa-moon', 'fa-sun'); // Replace moon with sun icon
+                    modeIcon.classList.replace('fa-moon', 'fa-sun');
                 } else {
                     modeText.textContent = 'Mode Terang';
-                    modeIcon.classList.replace('fa-sun', 'fa-moon'); // Replace sun with moon icon
+                    modeIcon.classList.replace('fa-sun', 'fa-moon');
                 }
             }
 
-            // Check for saved theme preference in localStorage on page load
             const savedTheme = localStorage.getItem('theme');
             if (savedTheme === 'dark') {
                 body.classList.add('dark-mode');
@@ -287,13 +278,9 @@
                 updateModeToggleUI(false);
             }
 
-            // Add event listener for the mode toggle button
             modeToggleBtn.addEventListener('click', () => {
-                // Toggle 'dark-mode' class on the body
                 const isDarkMode = body.classList.toggle('dark-mode');
-                // Save the current theme preference to localStorage
                 localStorage.setItem('theme', isDarkMode ? 'dark' : 'light');
-                // Update the button's text and icon
                 updateModeToggleUI(isDarkMode);
             });
         });
