--- a/as.html
+++ b/as.html
@@ -1,289 +1,266 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Halaman Utama Proyek</title>
-    <link rel="icon" type="image/png" href="icon.png" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <title>Halaman Utama Proyek</title>
+  <link rel="icon" type="image/png" href="icon.png" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
 
-    <style>
-        :root {
-            --primary-color: #007bff;
-            --secondary-color: #6c757d;
-            --body-bg-light: #f8f9fa;
-            --body-bg-dark: #343a40;
-            --text-color-light: #212529;
-            --text-color-dark: #f8f9fa;
-            --card-bg-light: #ffffff;
-            --card-bg-dark: #495057;
-            --border-color-light: #dee2e6;
-            --border-color-dark: #6c757d;
-        }
+  <style>
+    :root {
+      --primary-color: #007bff;
+      --secondary-color: #6c757d;
+      --body-bg-light: #f8f9fa;
+      --body-bg-dark: #343a40;
+      --text-color-light: #212529;
+      --text-color-dark: #f8f9fa;
+    }
 
-        * {
-            box-sizing: border-box;
-        }
+    * {
+      box-sizing: border-box;
+      padding: 0;
+      margin: 0;
+    }
 
-        html, body {
-            height: 100%;
-            margin: 0;
-            padding: 0;
-            overflow-x: hidden;
-            scroll-behavior: smooth;
-            -webkit-overflow-scrolling: touch;
-            max-width: 100vw;
-        }
+    html, body {
+      height: 100%;
+      max-width: 100vw;
+      overflow-x: hidden;
+      scroll-behavior: smooth;
+      font-family: 'Inter', sans-serif;
+      background-color: var(--body-bg-light);
+      color: var(--text-color-light);
+      transition: background-color 0.3s ease, color 0.3s ease;
+      display: flex;
+      flex-direction: column;
+    }
 
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: var(--body-bg-light);
-            color: var(--text-color-light);
-            transition: background-color 0.3s ease, color 0.3s ease;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-            overflow-y: auto;
-        }
+    body.dark-mode {
+      background-color: var(--body-bg-dark);
+      color: var(--text-color-dark);
+    }
 
-        body.dark-mode {
-            background-color: var(--body-bg-dark);
-            color: var(--text-color-dark);
-        }
+    .container-fluid {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+      padding: 10px 10px 0;
+      width: 100%;
+    }
 
-        .container-fluid {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            padding: 15px 10px;
-            min-height: calc(100vh - 50px);
-        }
+    h1 {
+      font-size: 1.75rem;
+      font-weight: 700;
+      margin: 10px 0 20px;
+      text-align: center;
+      transition: color 0.3s ease;
+    }
 
-        h1 {
-            color: var(--text-color-light);
-            margin-bottom: 25px;
-            font-weight: 700;
-            transition: color 0.3s ease;
-        }
+    body.dark-mode h1 {
+      color: var(--text-color-dark);
+    }
 
-        body.dark-mode h1 {
-            color: var(--text-color-dark);
-        }
+    .row {
+      width: 100%;
+      max-width: 600px;
+    }
 
-        .row > .col {
-            padding-left: 5px;
-            padding-right: 5px;
-        }
+    .project-button {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 15px 10px;
+      min-height: 100px;
+      text-align: center;
+      text-decoration: none;
+      color: white;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      font-weight: 600;
+      font-size: 1.05em;
+      width: 100%;
+      transition: all 0.3s ease;
+    }
 
-        .project-button {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            padding: 20px 15px;
-            min-height: 120px;
-            text-align: center;
-            text-decoration: none;
-            color: white;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            transition: all 0.3s ease;
-            font-weight: 600;
-            font-size: 1.1em;
-            width: 100%;
-            max-width: 100%;
-        }
+    .project-button i {
+      font-size: 2em;
+      margin-bottom: 8px;
+      color: rgba(255, 255, 255, 0.9);
+    }
 
-        .project-button i {
-            font-size: 2.5em;
-            margin-bottom: 10px;
-            color: rgba(255, 255, 255, 0.8);
-        }
+    .project-button:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+      opacity: 0.95;
+    }
 
-        .project-button:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
-            opacity: 0.95;
-        }
+    .btn-custom-1 { background: linear-gradient(135deg, #1abc9c, #16a085); }
+    .btn-custom-2 { background: linear-gradient(135deg, #3498db, #2980b9); }
+    .btn-custom-3 { background: linear-gradient(135deg, #9b59b6, #8e44ad); }
+    .btn-custom-4 { background: linear-gradient(135deg, #e67e22, #d35400); }
+    .btn-custom-5 { background: linear-gradient(135deg, #f1c40f, #f39c12); }
+    .btn-custom-6 { background: linear-gradient(135deg, #e74c3c, #c0392b); }
 
-        .btn-custom-1 { background: linear-gradient(135deg, #1abc9c, #16a085); }
-        .btn-custom-2 { background: linear-gradient(135deg, #3498db, #2980b9); }
-        .btn-custom-3 { background: linear-gradient(135deg, #9b59b6, #8e44ad); }
-        .btn-custom-4 { background: linear-gradient(135deg, #e67e22, #d35400); }
-        .btn-custom-5 { background: linear-gradient(135deg, #f1c40f, #f39c12); }
-        .btn-custom-6 { background: linear-gradient(135deg, #e74c3c, #c0392b); }
+    .mode-toggle-wrapper {
+      margin-top: 20px;
+      margin-bottom: 10px;
+      text-align: center;
+    }
 
-        .mode-toggle-wrapper {
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            margin-top: 25px;
-        }
+    .mode-toggle {
+      background: none;
+      border: none;
+      cursor: pointer;
+      padding: 8px 16px;
+      font-size: 1em;
+      border-radius: 50px;
+      color: var(--primary-color);
+      font-weight: 600;
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    }
 
-        .mode-toggle {
-            background: none;
-            border: none;
-            cursor: pointer;
-            font-size: 1em;
-            padding: 10px 15px;
-            border-radius: 50px;
-            color: var(--primary-color);
-            transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            font-weight: 600;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
+    .mode-toggle:hover {
+      background-color: rgba(0, 123, 255, 0.1);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+    }
 
-        .mode-toggle i {
-            font-size: 1.2em;
-        }
+    body.dark-mode .mode-toggle {
+      color: #9b59b6;
+    }
 
-        .mode-toggle:hover {
-            background-color: rgba(0, 123, 255, 0.1);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
-        }
+    body.dark-mode .mode-toggle:hover {
+      background-color: rgba(155, 89, 182, 0.2);
+    }
 
-        body.dark-mode .mode-toggle {
-            color: #9b59b6;
-        }
+    .footer-text {
+      font-size: 0.85em;
+      color: var(--secondary-color);
+      text-align: center;
+      padding: 10px 0;
+    }
 
-        body.dark-mode .mode-toggle:hover {
-            background-color: rgba(155, 89, 182, 0.2);
-            box-shadow: 0 4px 8px rgba(255, 255, 255, 0.2);
-        }
+    body.dark-mode .footer-text {
+      color: #bdc3c7;
+    }
 
-        .footer-text {
-            margin-top: 15px;
-            padding-bottom: 15px;
-            color: var(--secondary-color);
-            font-size: 0.85em;
-            text-align: center;
-            transition: color 0.3s ease;
-        }
+    @media (max-width: 576px) {
+      h1 {
+        font-size: 1.5rem;
+        margin: 5px 0 15px;
+      }
 
-        body.dark-mode .footer-text {
-            color: #bdc3c7;
-        }
+      .project-button {
+        font-size: 1em;
+        min-height: 90px;
+        margin-bottom: 10px;
+      }
 
-        @media (max-width: 576px) {
-            .project-button {
-                padding: 15px 10px;
-                min-height: 100px;
-                font-size: 1em;
-                margin-bottom: 15px;
-            }
+      .project-button i {
+        font-size: 1.8em;
+        margin-bottom: 5px;
+      }
 
-            .project-button i {
-                font-size: 2em;
-                margin-bottom: 8px;
-            }
+      .mode-toggle-wrapper {
+        margin-top: 15px;
+        margin-bottom: 5px;
+      }
 
-            h1 {
-                font-size: 1.5em;
-                margin-bottom: 20px;
-            }
-
-            .container-fluid {
-                padding-top: 10px;
-                padding-bottom: 10px;
-            }
-
-            .mode-toggle-wrapper {
-                margin-top: 20px;
-            }
-
-            .footer-text {
-                margin-top: 10px;
-                padding-bottom: 10px;
-            }
-        }
-    </style>
+      .footer-text {
+        padding: 5px 0;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="container-fluid">
-        <h1 class="text-center">Daftar Proyek Saya v3</h1>
-        <div class="row row-cols-2 g-3">
-            <div class="col">
-                <a href="project1.html" class="project-button btn-custom-1">
-                    <i class="fas fa-calculator"></i> <span>Proyek 1</span>
-                </a>
-            </div>
-            <div class="col">
-                <a href="project2.html" class="project-button btn-custom-2">
-                    <i class="fas fa-bolt"></i> <span>Proyek 2</span>
-                </a>
-            </div>
-            <div class="col">
-                <a href="project3.html" class="project-button btn-custom-3">
-                    <i class="fas fa-thermometer-half"></i> <span>Proyek 3</span>
-                </a>
-            </div>
-            <div class="col">
-                <a href="project4.html" class="project-button btn-custom-4">
-                    <i class="fas fa-ruler"></i> <span>Proyek 4</span>
-                </a>
-            </div>
-            <div class="col">
-                <a href="project5.html" class="project-button btn-custom-5">
-                    <i class="fas fa-code"></i> <span>Proyek 5</span>
-                </a>
-            </div>
-            <div class="col">
-                <a href="project6.html" class="project-button btn-custom-6">
-                    <i class="fas fa-flask"></i> <span>Proyek 6</span>
-                </a>
-            </div>
-        </div>
-        <div class="mode-toggle-wrapper">
-            <button id="modeToggle" class="mode-toggle" aria-label="Toggle dark and light mode">
-                <i class="fas fa-moon"></i> <span id="modeText">Mode Terang</span>
-            </button>
-        </div>
+  <div class="container-fluid">
+    <h1>Daftar Proyek Saya v4</h1>
+    <div class="row row-cols-2 g-3">
+      <div class="col">
+        <a href="project1.html" class="project-button btn-custom-1">
+          <i class="fas fa-calculator"></i><span>Proyek 1</span>
+        </a>
+      </div>
+      <div class="col">
+        <a href="project2.html" class="project-button btn-custom-2">
+          <i class="fas fa-bolt"></i><span>Proyek 2</span>
+        </a>
+      </div>
+      <div class="col">
+        <a href="project3.html" class="project-button btn-custom-3">
+          <i class="fas fa-thermometer-half"></i><span>Proyek 3</span>
+        </a>
+      </div>
+      <div class="col">
+        <a href="project4.html" class="project-button btn-custom-4">
+          <i class="fas fa-ruler"></i><span>Proyek 4</span>
+        </a>
+      </div>
+      <div class="col">
+        <a href="project5.html" class="project-button btn-custom-5">
+          <i class="fas fa-code"></i><span>Proyek 5</span>
+        </a>
+      </div>
+      <div class="col">
+        <a href="project6.html" class="project-button btn-custom-6">
+          <i class="fas fa-flask"></i><span>Proyek 6</span>
+        </a>
+      </div>
     </div>
 
-    <div class="footer-text">
-        Dibuat oleh Williyanto Adi 2025
+    <div class="mode-toggle-wrapper">
+      <button id="modeToggle" class="mode-toggle" aria-label="Toggle dark and light mode">
+        <i class="fas fa-moon"></i> <span id="modeText">Mode Terang</span>
+      </button>
     </div>
+  </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const modeToggleBtn = document.getElementById('modeToggle');
-            const body = document.body;
-            const modeIcon = modeToggleBtn.querySelector('i');
-            const modeText = document.getElementById('modeText');
+  <div class="footer-text">
+    Dibuat oleh Williyanto Adi 2025
+  </div>
 
-            function updateModeToggleUI(isDarkMode) {
-                if (isDarkMode) {
-                    modeText.textContent = 'Mode Gelap';
-                    modeIcon.classList.replace('fa-moon', 'fa-sun');
-                } else {
-                    modeText.textContent = 'Mode Terang';
-                    modeIcon.classList.replace('fa-sun', 'fa-moon');
-                }
-            }
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const modeToggleBtn = document.getElementById('modeToggle');
+      const body = document.body;
+      const modeIcon = modeToggleBtn.querySelector('i');
+      const modeText = document.getElementById('modeText');
 
-            const savedTheme = localStorage.getItem('theme');
-            if (savedTheme === 'dark') {
-                body.classList.add('dark-mode');
-                updateModeToggleUI(true);
-            } else {
-                body.classList.remove('dark-mode');
-                updateModeToggleUI(false);
-            }
+      function updateModeToggleUI(isDarkMode) {
+        if (isDarkMode) {
+          modeText.textContent = 'Mode Gelap';
+          modeIcon.classList.replace('fa-moon', 'fa-sun');
+        } else {
+          modeText.textContent = 'Mode Terang';
+          modeIcon.classList.replace('fa-sun', 'fa-moon');
+        }
+      }
 
-            modeToggleBtn.addEventListener('click', () => {
-                const isDarkMode = body.classList.toggle('dark-mode');
-                localStorage.setItem('theme', isDarkMode ? 'dark' : 'light');
-                updateModeToggleUI(isDarkMode);
-            });
-        });
-    </script>
+      const savedTheme = localStorage.getItem('theme');
+      if (savedTheme === 'dark') {
+        body.classList.add('dark-mode');
+        updateModeToggleUI(true);
+      } else {
+        body.classList.remove('dark-mode');
+        updateModeToggleUI(false);
+      }
+
+      modeToggleBtn.addEventListener('click', () => {
+        const isDarkMode = body.classList.toggle('dark-mode');
+        localStorage.setItem('theme', isDarkMode ? 'dark' : 'light');
+        updateModeToggleUI(isDarkMode);
+      });
+    });
+  </script>
 </body>
 </html>
