--- a/as.html
+++ b/as.html
@@ -142,7 +142,8 @@
       background-color: rgba(155, 89, 182, 0.2);
     }
 
-    .footer-text {
+    /* Footer styles removed */
+    /* .footer-text {
       font-size: 0.85em;
       color: var(--secondary-color);
       text-align: center;
@@ -151,7 +152,7 @@
 
     body.dark-mode .footer-text {
       color: #bdc3c7;
-    }
+    } */
 
     @media (max-width: 576px) {
       h1 {
@@ -175,15 +176,15 @@
         margin-bottom: 5px;
       }
 
-      .footer-text {
+      /* .footer-text {
         padding: 5px 0;
-      }
+      } */
     }
   </style>
 </head>
 <body>
   <div class="container-fluid">
-    <h1>Daftar Proyek Saya v4</h1>
+    <h1>Daftar Proyek Saya v5</h1>
     <div class="row row-cols-2 g-3">
       <div class="col">
         <a href="project1.html" class="project-button btn-custom-1">
@@ -224,9 +225,12 @@
     </div>
   </div>
 
+  <!-- Footer removed -->
+  <!--
   <div class="footer-text">
     Dibuat oleh Williyanto Adi 2025
   </div>
+  -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
