--- a/as.html
+++ b/as.html
@@ -56,7 +56,7 @@
     h1 {
       font-size: 1.75rem;
       font-weight: 700;
-      margin: 10px 0 20px;
+      margin: 10px 0 40px; /* Tambah jarak bawah dari 20px ke 40px */
       text-align: center;
       transition: color 0.3s ease;
     }
@@ -143,21 +143,11 @@
     }
 
     /* Footer styles removed */
-    /* .footer-text {
-      font-size: 0.85em;
-      color: var(--secondary-color);
-      text-align: center;
-      padding: 10px 0;
-    }
-
-    body.dark-mode .footer-text {
-      color: #bdc3c7;
-    } */
 
     @media (max-width: 576px) {
       h1 {
         font-size: 1.5rem;
-        margin: 5px 0 15px;
+        margin: 5px 0 25px; /* Tambah jarak bawah dari 15px ke 25px */
       }
 
       .project-button {
@@ -175,16 +165,12 @@
         margin-top: 15px;
         margin-bottom: 5px;
       }
-
-      /* .footer-text {
-        padding: 5px 0;
-      } */
     }
   </style>
 </head>
 <body>
   <div class="container-fluid">
-    <h1>Daftar Proyek Saya v5</h1>
+    <h1>Daftar Proyek Saya v6</h1>
     <div class="row row-cols-2 g-3">
       <div class="col">
         <a href="project1.html" class="project-button btn-custom-1">
@@ -226,11 +212,6 @@
   </div>
 
   <!-- Footer removed -->
-  <!--
-  <div class="footer-text">
-    Dibuat oleh Williyanto Adi 2025
-  </div>
-  -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
