--- a/as.html
+++ b/as.html
@@ -56,9 +56,25 @@
     h1 {
       font-size: 1.75rem;
       font-weight: 700;
-      margin: 10px 0 40px; /* Tambah jarak bawah dari 20px ke 40px */
+      margin: 10px 0 32px;
       text-align: center;
       transition: color 0.3s ease;
+    }
+
+    /* Garis horizontal custom */
+    .custom-hr {
+      width: 100%;
+      max-width: 600px;
+      margin: 0 auto 24px auto;
+      border: none;
+      border-top: 5px solid #007bff;
+      background: none;
+      height: 5px;
+      border-radius: 2px;
+      transition: border-color 0.3s;
+    }
+    body.dark-mode .custom-hr {
+      border-top: 5px solid #9b59b6;
     }
 
     body.dark-mode h1 {
@@ -142,12 +158,48 @@
       background-color: rgba(155, 89, 182, 0.2);
     }
 
-    /* Footer styles removed */
+    /* Footer styling */
+    .footer-hr {
+      width: 100%;
+      max-width: 600px;
+      margin: 40px auto 0 auto;
+      border: none;
+      border-top: 4px solid #007bff;
+      background: none;
+      height: 4px;
+      border-radius: 2px;
+      transition: border-color 0.3s;
+    }
+    body.dark-mode .footer-hr {
+      border-top: 4px solid #9b59b6;
+    }
+
+    .footer-text {
+      font-size: 0.95em;
+      color: var(--secondary-color);
+      text-align: center;
+      padding: 14px 0 18px 0;
+      letter-spacing: 1px;
+      font-weight: 600;
+    }
+
+    body.dark-mode .footer-text {
+      color: #bdc3c7;
+    }
 
     @media (max-width: 576px) {
       h1 {
         font-size: 1.5rem;
-        margin: 5px 0 25px; /* Tambah jarak bawah dari 15px ke 25px */
+        margin: 5px 0 18px;
+      }
+
+      .custom-hr, .footer-hr {
+        margin-bottom: 16px;
+        max-width: 100%;
+      }
+
+      .footer-hr {
+        margin-top: 24px;
       }
 
       .project-button {
@@ -170,7 +222,8 @@
 </head>
 <body>
   <div class="container-fluid">
-    <h1>Daftar Proyek Saya v6</h1>
+    <h1>Daftar Proyek Saya</h1>
+    <hr class="custom-hr" />
     <div class="row row-cols-2 g-3">
       <div class="col">
         <a href="project1.html" class="project-button btn-custom-1">
@@ -211,7 +264,10 @@
     </div>
   </div>
 
-  <!-- Footer removed -->
+  <hr class="footer-hr" />
+  <div class="footer-text">
+    Made by Williyanto Adi 2025
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
