--- a/as.html
+++ b/as.html
@@ -67,14 +67,14 @@
       max-width: 600px;
       margin: 0 auto 24px auto;
       border: none;
-      border-top: 5px solid #007bff;
+      border-top: 2px solid #000;
       background: none;
-      height: 5px;
+      height: 2px;
       border-radius: 2px;
       transition: border-color 0.3s;
     }
     body.dark-mode .custom-hr {
-      border-top: 5px solid #9b59b6;
+      border-top: 2px solid #fff;
     }
 
     body.dark-mode h1 {
@@ -122,6 +122,10 @@
     .btn-custom-4 { background: linear-gradient(135deg, #e67e22, #d35400); }
     .btn-custom-5 { background: linear-gradient(135deg, #f1c40f, #f39c12); }
     .btn-custom-6 { background: linear-gradient(135deg, #e74c3c, #c0392b); }
+    .btn-custom-7 { background: linear-gradient(135deg, #34495e, #2c3e50); }
+    .btn-custom-8 { background: linear-gradient(135deg, #27ae60, #229954); }
+    .btn-custom-9 { background: linear-gradient(135deg, #fd79a8, #e84393); }
+    .btn-custom-10 { background: linear-gradient(135deg, #00b894, #00cec9); }
 
     .mode-toggle-wrapper {
       margin-top: 20px;
@@ -162,16 +166,16 @@
     .footer-hr {
       width: 100%;
       max-width: 600px;
-      margin: 40px auto 0 auto;
+      margin: 6px auto 0 auto;
       border: none;
-      border-top: 4px solid #007bff;
+      border-top: 2px solid #000;
       background: none;
-      height: 4px;
+      height: 2px;
       border-radius: 2px;
       transition: border-color 0.3s;
     }
     body.dark-mode .footer-hr {
-      border-top: 4px solid #9b59b6;
+      border-top: 2px solid #fff;
     }
 
     .footer-text {
@@ -199,7 +203,7 @@
       }
 
       .footer-hr {
-        margin-top: 24px;
+        margin-top: 4px;
       }
 
       .project-button {
@@ -222,7 +226,7 @@
 </head>
 <body>
   <div class="container-fluid">
-    <h1>Daftar Proyek Saya</h1>
+    <h1>Daftar Proyek Saya v6</h1>
     <hr class="custom-hr" />
     <div class="row row-cols-2 g-3">
       <div class="col">
@@ -253,6 +257,26 @@
       <div class="col">
         <a href="project6.html" class="project-button btn-custom-6">
           <i class="fas fa-flask"></i><span>Proyek 6</span>
+        </a>
+      </div>
+      <div class="col">
+        <a href="project7.html" class="project-button btn-custom-7">
+          <i class="fas fa-music"></i><span>Proyek 7</span>
+        </a>
+      </div>
+      <div class="col">
+        <a href="project8.html" class="project-button btn-custom-8">
+          <i class="fas fa-paint-brush"></i><span>Proyek 8</span>
+        </a>
+      </div>
+      <div class="col">
+        <a href="project9.html" class="project-button btn-custom-9">
+          <i class="fas fa-tree"></i><span>Proyek 9</span>
+        </a>
+      </div>
+      <div class="col">
+        <a href="project10.html" class="project-button btn-custom-10">
+          <i class="fas fa-rocket"></i><span>Proyek 10</span>
         </a>
       </div>
     </div>
