--- a/as.html
+++ b/as.html
@@ -61,7 +61,6 @@
       transition: color 0.3s ease;
     }
 
-    /* Garis horizontal custom */
     .custom-hr {
       width: 100%;
       max-width: 600px;
@@ -127,6 +126,41 @@
     .btn-custom-9 { background: linear-gradient(135deg, #fd79a8, #e84393); }
     .btn-custom-10 { background: linear-gradient(135deg, #00b894, #00cec9); }
 
+    .hidden-projects {
+      display: none;
+    }
+
+    .show-more-btn-wrapper {
+      width: 100%;
+      max-width: 600px;
+      margin: 15px auto 0 auto;
+      text-align: center;
+    }
+
+    .show-more-btn {
+      display: inline-block;
+      background: var(--primary-color);
+      color: #fff;
+      border: none;
+      border-radius: 30px;
+      padding: 8px 28px;
+      font-size: 1em;
+      font-weight: 600;
+      cursor: pointer;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.10);
+      transition: background 0.2s, box-shadow 0.2s;
+    }
+    .show-more-btn:hover {
+      background: #0056b3;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+    }
+    body.dark-mode .show-more-btn {
+      background: #9b59b6;
+    }
+    body.dark-mode .show-more-btn:hover {
+      background: #6c3483;
+    }
+
     .mode-toggle-wrapper {
       margin-top: 20px;
       margin-bottom: 10px;
@@ -162,7 +196,6 @@
       background-color: rgba(155, 89, 182, 0.2);
     }
 
-    /* Footer styling */
     .footer-hr {
       width: 100%;
       max-width: 600px;
@@ -206,6 +239,10 @@
         margin-top: 4px;
       }
 
+      .show-more-btn-wrapper {
+        margin-top: 8px;
+      }
+
       .project-button {
         font-size: 1em;
         min-height: 90px;
@@ -226,7 +263,7 @@
 </head>
 <body>
   <div class="container-fluid">
-    <h1>Daftar Proyek Saya v6</h1>
+    <h1>Daftar Proyek Saya v7</h1>
     <hr class="custom-hr" />
     <div class="row row-cols-2 g-3">
       <div class="col">
@@ -259,26 +296,34 @@
           <i class="fas fa-flask"></i><span>Proyek 6</span>
         </a>
       </div>
-      <div class="col">
-        <a href="project7.html" class="project-button btn-custom-7">
-          <i class="fas fa-music"></i><span>Proyek 7</span>
-        </a>
+      <div class="hidden-projects" id="hiddenProjects">
+        <div class="col">
+          <a href="project7.html" class="project-button btn-custom-7">
+            <i class="fas fa-music"></i><span>Proyek 7</span>
+          </a>
+        </div>
+        <div class="col">
+          <a href="project8.html" class="project-button btn-custom-8">
+            <i class="fas fa-paint-brush"></i><span>Proyek 8</span>
+          </a>
+        </div>
+        <div class="col">
+          <a href="project9.html" class="project-button btn-custom-9">
+            <i class="fas fa-tree"></i><span>Proyek 9</span>
+          </a>
+        </div>
+        <div class="col">
+          <a href="project10.html" class="project-button btn-custom-10">
+            <i class="fas fa-rocket"></i><span>Proyek 10</span>
+          </a>
+        </div>
       </div>
-      <div class="col">
-        <a href="project8.html" class="project-button btn-custom-8">
-          <i class="fas fa-paint-brush"></i><span>Proyek 8</span>
-        </a>
-      </div>
-      <div class="col">
-        <a href="project9.html" class="project-button btn-custom-9">
-          <i class="fas fa-tree"></i><span>Proyek 9</span>
-        </a>
-      </div>
-      <div class="col">
-        <a href="project10.html" class="project-button btn-custom-10">
-          <i class="fas fa-rocket"></i><span>Proyek 10</span>
-        </a>
-      </div>
+    </div>
+
+    <div class="show-more-btn-wrapper">
+      <button id="showMoreBtn" class="show-more-btn">
+        <i class="fas fa-chevron-down"></i> Tampilkan Proyek Lainnya
+      </button>
     </div>
 
     <div class="mode-toggle-wrapper">
@@ -296,6 +341,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
+      // Dark mode toggle
       const modeToggleBtn = document.getElementById('modeToggle');
       const body = document.body;
       const modeIcon = modeToggleBtn.querySelector('i');
@@ -324,6 +370,21 @@
         const isDarkMode = body.classList.toggle('dark-mode');
         localStorage.setItem('theme', isDarkMode ? 'dark' : 'light');
         updateModeToggleUI(isDarkMode);
+      });
+
+      // Show more projects logic
+      const hiddenProjects = document.getElementById('hiddenProjects');
+      const showMoreBtn = document.getElementById('showMoreBtn');
+      let shown = false;
+      showMoreBtn.addEventListener('click', () => {
+        shown = !shown;
+        if (shown) {
+          hiddenProjects.style.display = "contents";
+          showMoreBtn.innerHTML = '<i class="fas fa-chevron-up"></i> Sembunyikan Proyek Lainnya';
+        } else {
+          hiddenProjects.style.display = "none";
+          showMoreBtn.innerHTML = '<i class="fas fa-chevron-down"></i> Tampilkan Proyek Lainnya';
+        }
       });
     });
   </script>
