--- a/as.html
+++ b/as.html
@@ -128,6 +128,8 @@
 
     .hidden-projects {
       display: none;
+      width: 100%;
+      max-width: 600px;
     }
 
     .show-more-btn-wrapper {
@@ -243,6 +245,10 @@
         margin-top: 8px;
       }
 
+      .hidden-projects {
+        max-width: 100%;
+      }
+
       .project-button {
         font-size: 1em;
         min-height: 90px;
@@ -263,7 +269,7 @@
 </head>
 <body>
   <div class="container-fluid">
-    <h1>Daftar Proyek Saya v7</h1>
+    <h1>Daftar Proyek Saya v8</h1>
     <hr class="custom-hr" />
     <div class="row row-cols-2 g-3">
       <div class="col">
@@ -296,27 +302,29 @@
           <i class="fas fa-flask"></i><span>Proyek 6</span>
         </a>
       </div>
-      <div class="hidden-projects" id="hiddenProjects">
-        <div class="col">
-          <a href="project7.html" class="project-button btn-custom-7">
-            <i class="fas fa-music"></i><span>Proyek 7</span>
-          </a>
-        </div>
-        <div class="col">
-          <a href="project8.html" class="project-button btn-custom-8">
-            <i class="fas fa-paint-brush"></i><span>Proyek 8</span>
-          </a>
-        </div>
-        <div class="col">
-          <a href="project9.html" class="project-button btn-custom-9">
-            <i class="fas fa-tree"></i><span>Proyek 9</span>
-          </a>
-        </div>
-        <div class="col">
-          <a href="project10.html" class="project-button btn-custom-10">
-            <i class="fas fa-rocket"></i><span>Proyek 10</span>
-          </a>
-        </div>
+    </div>
+
+    <!-- Hidden projects: always in 2x2 grid -->
+    <div class="row row-cols-2 g-3 hidden-projects" id="hiddenProjects">
+      <div class="col">
+        <a href="project7.html" class="project-button btn-custom-7">
+          <i class="fas fa-music"></i><span>Proyek 7</span>
+        </a>
+      </div>
+      <div class="col">
+        <a href="project8.html" class="project-button btn-custom-8">
+          <i class="fas fa-paint-brush"></i><span>Proyek 8</span>
+        </a>
+      </div>
+      <div class="col">
+        <a href="project9.html" class="project-button btn-custom-9">
+          <i class="fas fa-tree"></i><span>Proyek 9</span>
+        </a>
+      </div>
+      <div class="col">
+        <a href="project10.html" class="project-button btn-custom-10">
+          <i class="fas fa-rocket"></i><span>Proyek 10</span>
+        </a>
       </div>
     </div>
 
@@ -379,7 +387,7 @@
       showMoreBtn.addEventListener('click', () => {
         shown = !shown;
         if (shown) {
-          hiddenProjects.style.display = "contents";
+          hiddenProjects.style.display = "flex";
           showMoreBtn.innerHTML = '<i class="fas fa-chevron-up"></i> Sembunyikan Proyek Lainnya';
         } else {
           hiddenProjects.style.display = "none";
