--- a/as.html
+++ b/as.html
@@ -123,8 +123,6 @@
     .btn-custom-6 { background: linear-gradient(135deg, #e74c3c, #c0392b); }
     .btn-custom-7 { background: linear-gradient(135deg, #34495e, #2c3e50); }
     .btn-custom-8 { background: linear-gradient(135deg, #27ae60, #229954); }
-    .btn-custom-9 { background: linear-gradient(135deg, #fd79a8, #e84393); }
-    .btn-custom-10 { background: linear-gradient(135deg, #00b894, #00cec9); }
 
     .hidden-projects {
       display: none;
@@ -269,7 +267,7 @@
 </head>
 <body>
   <div class="container-fluid">
-    <h1>Daftar Proyek Saya v8</h1>
+    <h1>Daftar Proyek Saya</h1>
     <hr class="custom-hr" />
     <div class="row row-cols-2 g-3">
       <div class="col">
@@ -304,26 +302,16 @@
       </div>
     </div>
 
-    <!-- Hidden projects: always in 2x2 grid -->
+    <!-- Hidden projects: always in 2x2 grid, but now only two projects (7 and 8) -->
     <div class="row row-cols-2 g-3 hidden-projects" id="hiddenProjects">
       <div class="col">
         <a href="project7.html" class="project-button btn-custom-7">
-          <i class="fas fa-music"></i><span>Proyek 7</span>
+          <i class="fas fa-robot"></i><span>Proyek 7</span>
         </a>
       </div>
       <div class="col">
         <a href="project8.html" class="project-button btn-custom-8">
-          <i class="fas fa-paint-brush"></i><span>Proyek 8</span>
-        </a>
-      </div>
-      <div class="col">
-        <a href="project9.html" class="project-button btn-custom-9">
-          <i class="fas fa-tree"></i><span>Proyek 9</span>
-        </a>
-      </div>
-      <div class="col">
-        <a href="project10.html" class="project-button btn-custom-10">
-          <i class="fas fa-rocket"></i><span>Proyek 10</span>
+          <i class="fas fa-computer"></i><span>Proyek 8</span>
         </a>
       </div>
     </div>
