--- a/as.html
+++ b/as.html
@@ -302,7 +302,7 @@
       </div>
     </div>
 
-    <!-- Hidden projects: always in 2x2 grid, but now only two projects (7 and 8) -->
+    <!-- Hidden projects: always in 2x2 grid -->
     <div class="row row-cols-2 g-3 hidden-projects" id="hiddenProjects">
       <div class="col">
         <a href="project7.html" class="project-button btn-custom-7">
@@ -311,7 +311,7 @@
       </div>
       <div class="col">
         <a href="project8.html" class="project-button btn-custom-8">
-          <i class="fas fa-computer"></i><span>Proyek 8</span>
+          <i class="fas fa-desktop"></i><span>Proyek 8</span>
         </a>
       </div>
     </div>
