--- a/as.html
+++ b/as.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>Halaman Utama Proyek</title>
+  <title>My Project</title>
   <link rel="icon" type="image/png" href="icon.png" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
@@ -275,7 +275,8 @@
 </head>
 <body>
   <div class="container-fluid">
-    <h1>Daftar Proyek Saya v7</h1>
+    <h1>My Project</h1>
+    <br>
     <hr class="custom-hr" />
     <div class="row row-cols-2 g-3">
       <div class="col">
