--- a/as.html
+++ b/as.html
@@ -281,32 +281,32 @@
     <div class="row row-cols-2 g-3">
       <div class="col">
         <a href="project1.html" class="project-button btn-custom-1">
-          <i class="fas fa-calculator"></i><span>Proyek 1</span>
+          <i class="fas fa-calculator"></i><span>Kalkulator Hambatan Konduktor</span>
         </a>
       </div>
       <div class="col">
         <a href="project2.html" class="project-button btn-custom-2">
-          <i class="fas fa-bolt"></i><span>Proyek 2</span>
+          <i class="fas fa-bolt"></i><span>Spesifikasi Konduktor</span>
         </a>
       </div>
       <div class="col">
         <a href="project3.html" class="project-button btn-custom-3">
-          <i class="fas fa-thermometer-half"></i><span>Proyek 3</span>
+          <i class="fas fa-thermometer-half"></i><span>Faktor Koreksi Suhu</span>
         </a>
       </div>
       <div class="col">
         <a href="project4.html" class="project-button btn-custom-4">
-          <i class="fas fa-ruler"></i><span>Proyek 4</span>
+          <i class="fas fa-ruler"></i><span>Hitung Panjang kabel di drum</span>
         </a>
       </div>
       <div class="col">
         <a href="project5.html" class="project-button btn-custom-5">
-          <i class="fas fa-code"></i><span>Proyek 5</span>
+          <i class="fas fa-code"></i><span>Eksperimen</span>
         </a>
       </div>
       <div class="col">
         <a href="project6.html" class="project-button btn-custom-6">
-          <i class="fas fa-flask"></i><span>Proyek 6</span>
+          <i class="fas fa-flask"></i><span>Pengembangan</span>
         </a>
       </div>
     </div>
@@ -315,12 +315,12 @@
     <div class="row row-cols-2 g-3 hidden-projects-row hidden-projects" id="hiddenProjects">
       <div class="col">
         <a href="project7.html" class="project-button btn-custom-7">
-          <i class="fas fa-robot"></i><span>Proyek 7</span>
+          <i class="fas fa-robot"></i><span>Tools Lainnya 1</span>
         </a>
       </div>
       <div class="col">
         <a href="project8.html" class="project-button btn-custom-8">
-          <i class="fas fa-desktop"></i><span>Proyek 8</span>
+          <i class="fas fa-desktop"></i><span>Tools Lainnya 2</span>
         </a>
       </div>
     </div>
