--- a/as.html
+++ b/as.html
@@ -80,7 +80,6 @@
       color: var(--text-color-dark);
     }
 
-    /* Tombol Proyek */
     .row {
       width: 100%;
       max-width: 600px;
@@ -92,7 +91,8 @@
       justify-content: center;
       align-items: center;
       padding: 15px 10px;
-      min-height: 100px;
+      min-height: 110px;
+      min-width: 0;
       text-align: center;
       text-decoration: none;
       color: white;
@@ -101,13 +101,45 @@
       font-weight: 600;
       font-size: 1.05em;
       width: 100%;
+      height: 100%;
       transition: all 0.3s ease;
+      /* Untuk memastikan semua tombol sama tinggi di grid */
+      aspect-ratio: 1.9 / 1;
+      /* aspect-ratio bisa disesuaikan agar proporsional di mobile */
+      word-break: break-word;
+      overflow-wrap: break-word;
+    }
+
+    /* Untuk memastikan semua tombol di satu baris selalu tinggi yang sama */
+    .row > .col {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+    }
+    .row > .col > .project-button {
+      flex: 1 1 auto;
+      height: 100%;
     }
 
     .project-button i {
       font-size: 2em;
       margin-bottom: 8px;
       color: rgba(255, 255, 255, 0.9);
+      flex-shrink: 0;
+    }
+
+    .project-button span {
+      display: block;
+      width: 100%;
+      /* Membatasi jumlah baris teks agar tidak terlalu tinggi */
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      line-height: 1.2em;
+      max-height: 2.4em;
+      word-break: break-word;
     }
 
     .project-button:hover {
@@ -125,13 +157,11 @@
     .btn-custom-7 { background: linear-gradient(135deg, #34495e, #2c3e50); }
     .btn-custom-8 { background: linear-gradient(135deg, #27ae60, #229954); }
 
-    /* Hidden projects row style - agar jarak antar baris sama seperti grid utama */
     .hidden-projects-row {
       width: 100%;
       max-width: 600px;
       margin-top: 0 !important;
       margin-bottom: 0 !important;
-      /* Bootstrap g-3 tetap berlaku */
     }
 
     .hidden-projects {
@@ -259,6 +289,11 @@
         font-size: 1em;
         min-height: 90px;
         margin-bottom: 10px;
+        aspect-ratio: 1.7 / 1;
+      }
+
+      .project-button span {
+        font-size: 0.95em;
       }
 
       .project-button i {
@@ -312,7 +347,7 @@
     </div>
 
     <!-- Hidden projects: always in 2 columns, with the same gutter as main grid -->
-    <div class="row row-cols-2 g-3 hidden-projects-row hidden-projects" id="hiddenProjects">
+    <div class="row row-cols-2 g-3 hidden-projects-row hidden-projects" id="hiddenProjects" style="margin-top:0.5rem !important;">
       <div class="col">
         <a href="project7.html" class="project-button btn-custom-7">
           <i class="fas fa-robot"></i><span>Tools Lainnya 1</span>
