--- a/as.html
+++ b/as.html
@@ -54,17 +54,17 @@
     }
 
     h1 {
-      font-size: 1.75rem;
+      font-size: 1.7rem;
       font-weight: 700;
-      margin: 10px 0 32px;
+      margin: 14px 0 26px;
       text-align: center;
       transition: color 0.3s ease;
     }
 
     .custom-hr {
       width: 100%;
-      max-width: 600px;
-      margin: 0 auto 24px auto;
+      max-width: 500px;
+      margin: 0 auto 18px auto;
       border: none;
       border-top: 2px solid #000;
       background: none;
@@ -82,7 +82,8 @@
 
     .row {
       width: 100%;
-      max-width: 600px;
+      max-width: 500px;
+      margin: 0 auto;
     }
 
     .project-button {
@@ -90,62 +91,53 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      padding: 15px 10px;
-      min-height: 110px;
-      min-width: 0;
+      min-height: 82px;
+      padding: 10px 6px;
       text-align: center;
       text-decoration: none;
-      color: white;
+      color: #fff;
       border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.07);
       font-weight: 600;
-      font-size: 1.05em;
+      font-size: 1em;
       width: 100%;
       height: 100%;
-      transition: all 0.3s ease;
-      /* Untuk memastikan semua tombol sama tinggi di grid */
-      aspect-ratio: 1.9 / 1;
-      /* aspect-ratio bisa disesuaikan agar proporsional di mobile */
+      transition: all 0.2s;
+      background: #007bff;
+      margin-bottom: 0;
+      /* Agar nama panjang rapi dan tidak melebihi kotak */
+      overflow: hidden;
       word-break: break-word;
-      overflow-wrap: break-word;
-    }
-
-    /* Untuk memastikan semua tombol di satu baris selalu tinggi yang sama */
-    .row > .col {
-      display: flex;
-      flex-direction: column;
-      height: 100%;
-    }
-    .row > .col > .project-button {
-      flex: 1 1 auto;
-      height: 100%;
     }
 
     .project-button i {
-      font-size: 2em;
-      margin-bottom: 8px;
-      color: rgba(255, 255, 255, 0.9);
+      font-size: 1.45em;
+      margin-bottom: 5px;
+      color: rgba(255,255,255,0.93);
       flex-shrink: 0;
     }
 
     .project-button span {
       display: block;
-      width: 100%;
-      /* Membatasi jumlah baris teks agar tidak terlalu tinggi */
+      font-size: 0.98em;
+      font-weight: 500;
+      /* Maksimal dua baris, sisanya ellipsis */
       display: -webkit-box;
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
       overflow: hidden;
       text-overflow: ellipsis;
-      line-height: 1.2em;
-      max-height: 2.4em;
-      word-break: break-word;
+      line-height: 1.18em;
+      max-height: 2.36em;
     }
 
-    .project-button:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
-      opacity: 0.95;
+    .project-button:hover,
+    .project-button:focus {
+      transform: translateY(-2px) scale(1.025);
+      box-shadow: 0 4px 14px rgba(0,0,0,0.12);
+      opacity: 0.98;
+      text-decoration: none;
+      outline: none;
     }
 
     .btn-custom-1 { background: linear-gradient(135deg, #1abc9c, #16a085); }
@@ -157,9 +149,19 @@
     .btn-custom-7 { background: linear-gradient(135deg, #34495e, #2c3e50); }
     .btn-custom-8 { background: linear-gradient(135deg, #27ae60, #229954); }
 
+    .row > .col {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+    }
+    .row > .col > .project-button {
+      flex: 1 1 auto;
+      height: 100%;
+    }
+
     .hidden-projects-row {
       width: 100%;
-      max-width: 600px;
+      max-width: 500px;
       margin-top: 0 !important;
       margin-bottom: 0 !important;
     }
@@ -170,8 +172,8 @@
 
     .show-more-btn-wrapper {
       width: 100%;
-      max-width: 600px;
-      margin: 15px auto 0 auto;
+      max-width: 500px;
+      margin: 12px auto 0 auto;
       text-align: center;
     }
 
@@ -181,16 +183,16 @@
       color: #fff;
       border: none;
       border-radius: 30px;
-      padding: 8px 28px;
+      padding: 7px 25px;
       font-size: 1em;
       font-weight: 600;
       cursor: pointer;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.10);
-      transition: background 0.2s, box-shadow 0.2s;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.10);
+      transition: background 0.18s, box-shadow 0.18s;
     }
     .show-more-btn:hover {
       background: #0056b3;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+      box-shadow: 0 2px 10px rgba(0,0,0,0.12);
     }
     body.dark-mode .show-more-btn {
       background: #9b59b6;
@@ -200,8 +202,8 @@
     }
 
     .mode-toggle-wrapper {
-      margin-top: 20px;
-      margin-bottom: 10px;
+      margin-top: 18px;
+      margin-bottom: 8px;
       text-align: center;
     }
 
@@ -209,7 +211,7 @@
       background: none;
       border: none;
       cursor: pointer;
-      padding: 8px 16px;
+      padding: 6px 15px;
       font-size: 1em;
       border-radius: 50px;
       color: var(--primary-color);
@@ -217,13 +219,13 @@
       display: inline-flex;
       align-items: center;
       gap: 8px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-      transition: background-color 0.3s ease, box-shadow 0.3s ease;
+      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.06);
+      transition: background-color 0.23s, box-shadow 0.23s;
     }
 
     .mode-toggle:hover {
-      background-color: rgba(0, 123, 255, 0.1);
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+      background-color: rgba(0, 123, 255, 0.08);
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.11);
     }
 
     body.dark-mode .mode-toggle {
@@ -231,12 +233,12 @@
     }
 
     body.dark-mode .mode-toggle:hover {
-      background-color: rgba(155, 89, 182, 0.2);
+      background-color: rgba(155, 89, 182, 0.13);
     }
 
     .footer-hr {
       width: 100%;
-      max-width: 600px;
+      max-width: 500px;
       margin: 6px auto 0 auto;
       border: none;
       border-top: 2px solid #000;
@@ -264,46 +266,41 @@
 
     @media (max-width: 576px) {
       h1 {
-        font-size: 1.5rem;
-        margin: 5px 0 18px;
+        font-size: 1.2rem;
+        margin: 5px 0 15px;
       }
-
       .custom-hr, .footer-hr {
-        margin-bottom: 16px;
-        max-width: 100%;
-      }
-
-      .footer-hr {
-        margin-top: 4px;
-      }
-
-      .show-more-btn-wrapper {
-        margin-top: 8px;
-      }
-
-      .hidden-projects-row {
-        max-width: 100%;
-      }
-
-      .project-button {
-        font-size: 1em;
-        min-height: 90px;
         margin-bottom: 10px;
-        aspect-ratio: 1.7 / 1;
+        max-width: 100%;
       }
-
-      .project-button span {
-        font-size: 0.95em;
+      .footer-hr {
+        margin-top: 2px;
       }
-
+      .project-button {
+        font-size: 0.93em;
+        min-height: 68px;
+        padding: 8px 4px;
+      }
       .project-button i {
-        font-size: 1.8em;
-        margin-bottom: 5px;
+        font-size: 1.15em;
+        margin-bottom: 3px;
       }
-
+      .project-button span {
+        font-size: 0.93em;
+        max-height: 2.1em;
+      }
+      .row, .hidden-projects-row, .show-more-btn-wrapper {
+        max-width: 100vw;
+        padding-left: 0;
+        padding-right: 0;
+      }
       .mode-toggle-wrapper {
-        margin-top: 15px;
-        margin-bottom: 5px;
+        margin-top: 10px;
+        margin-bottom: 3px;
+      }
+      .show-more-btn {
+        padding: 7px 17px;
+        font-size: 0.95em;
       }
     }
   </style>
@@ -311,7 +308,6 @@
 <body>
   <div class="container-fluid">
     <h1>My Project</h1>
-    <br>
     <hr class="custom-hr" />
     <div class="row row-cols-2 g-3">
       <div class="col">
